crates/rattler_solve/tests/snapshots/backends__libsolv_sys__solve_dummy_repo_install_non_existent.snap
---
source: crates/rattler_solve/tests/backends.rs
assertion_line: 375
expression: err
---
Unsolvable(
    [
        "nothing provides requested asdfasdf",
    ],
)
