crates/rattler_solve/tests/snapshots/backends__libsolv_sys__solve_tensorboard_libsolv_rs.snap
---
source: crates/rattler_solve/tests/backends.rs
assertion_line: 375
expression: "solve_real_world::<LibsolvBackend>(vec![\"tensorboard=2.1.1\",\n        \"grpc-cpp=1.39.1\"])"
---
- _libgcc_mutex 0.1 conda_forge
- _openmp_mutex 4.5 2_gnu
- abseil-cpp 20210324.2 h9c3ff4c_0
- absl-py 1.0.0 pyhd8ed1ab_0
- aiohttp 3.8.1 py39hb9d737c_1
- aiosignal 1.2.0 pyhd8ed1ab_0
- async-timeout 4.0.2 pyhd8ed1ab_0
- attrs 21.4.0 pyhd8ed1ab_0
- blinker 1.4 py_1
- brotlipy 0.7.0 py39hb9d737c_1004
- bzip2 1.0.8 h7f98852_4
- c-ares 1.18.1 h7f98852_0
- ca-certificates 2022.6.15 ha878542_0
- cachetools 5.0.0 pyhd8ed1ab_0
- certifi 2022.6.15 py39hf3d152e_0
- cffi 1.15.1 py39he91dace_0
- charset-normalizer 2.0.11 pyhd8ed1ab_0
- click 8.1.3 py39hf3d152e_0
- cryptography 37.0.4 py39hd97740a_0
- frozenlist 1.3.1 py39hb9d737c_0
- google-auth 2.6.0 pyh6c4a22f_1
- google-auth-oauthlib 0.4.1 py_2
- grpc-cpp 1.39.1 h850795e_1
- grpcio 1.46.3 py39h0f497a6_0
- idna 3.3 pyhd8ed1ab_0
- importlib-metadata 4.11.4 py39hf3d152e_0
- ld_impl_linux-64 2.36.1 hea4e1c9_2
- libblas 3.9.0 16_linux64_openblas
- libcblas 3.9.0 16_linux64_openblas
- libffi 3.4.2 h7f98852_5
- libgcc-ng 12.1.0 h8d9b700_16
- libgfortran-ng 12.1.0 h69a702a_16
- libgfortran5 12.1.0 hdcd56e2_16
- libgomp 12.1.0 h8d9b700_16
- liblapack 3.9.0 16_linux64_openblas
- libnsl 2.0.0 h7f98852_0
- libopenblas 0.3.21 pthreads_h78a6416_1
- libprotobuf 3.16.0 h780b84a_0
- libsqlite 3.39.2 h753d276_1
- libstdcxx-ng 12.1.0 ha89aaad_16
- libuuid 2.32.1 h7f98852_1000
- libzlib 1.2.12 h166bdaf_2
- markdown 3.3.6 pyhd8ed1ab_0
- multidict 6.0.2 py39hb9d737c_1
- ncurses 6.3 h27087fc_1
- numpy 1.23.2 py39hba7629e_0
- oauthlib 3.2.0 pyhd8ed1ab_0
- openssl 1.1.1q h166bdaf_0
- protobuf 3.16.0 py39he80948d_0
- pyasn1 0.4.8 py_0
- pyasn1-modules 0.2.7 py_0
- pycparser 2.21 pyhd8ed1ab_0
- pyjwt 2.3.0 pyhd8ed1ab_1
- pyopenssl 22.0.0 pyhd8ed1ab_0
- pysocks 1.7.1 py39hf3d152e_5
- python 3.9.13 h9a8a25e_0_cpython
- python_abi 3.9 2_cp39
- pyu2f 0.1.5 pyhd8ed1ab_0
- re2 2021.09.01 h9c3ff4c_0
- readline 8.1.2 h0f457ee_0
- requests 2.27.1 pyhd8ed1ab_0
- requests-oauthlib 1.3.1 pyhd8ed1ab_0
- rsa 4.8 pyhd8ed1ab_0
- setuptools 65.0.2 py39hf3d152e_0
- six 1.16.0 pyh6c4a22f_0
- sqlite 3.39.2 h4ff8645_1
- tensorboard 2.1.1 py_1
- tk 8.6.12 h27826a3_0
- typing-extensions 4.0.1 hd8ed1ab_0
- typing_extensions 4.0.1 pyha770c72_0
- tzdata 2021e he74cb21_0
- urllib3 1.26.8 pyhd8ed1ab_1
- werkzeug 2.0.3 pyhd8ed1ab_1
- wheel 0.37.1 pyhd8ed1ab_0
- xz 5.2.6 h166bdaf_0
- yarl 1.7.2 py39hb9d737c_2
- zipp 3.7.0 pyhd8ed1ab_1
- zlib 1.2.12 h166bdaf_2

